# django-app

./: Dockerfile  pyproject.toml
mysite/mysite/: settings.py
mysite/shopapp/: forms.py  tests.py
