[tool.poetry]
name = "m-19-prod"
version = "0.1.0"
description = ""
authors = ["ilia"]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.0"
django-rest-framework = "^0.1.0"
django-filter = "^23.2"
django-debug-toolbar = "^4.2.0"
pillow = "^10.0.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
